structoedit.css
/*
Copyright 2021 Jens Hofschröer <structogramview@nigjo.de>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
@media screen {
:root{
  --structoedit-warning:red;
  --structoedit-menu:gray;
  --structoedit-menu-bg:lightgray;
  --structoedit-menu-sel:green;
  --structoedit-menu-sel-bg:lightblue;
  --structoedit-mark:PaleTurquoise;
  --structoedit-hovermark:lavender;
  
  --githublink-text:#000;
  --githublink-bg:#EEE;
  --githublink-shadow:lightgray;
  --githublink-borderline:#AAA;
}
@media(prefers-color-scheme:dark){
  :root{
  --structoedit-menu:silver;
  --structoedit-menu-bg:DimGray;
  --structoedit-menu-sel:mediumseagreen;
  --structoedit-menu-sel-bg:DarkSlateGray;
  --structoedit-mark:midnightblue;
  --structoedit-hovermark:DarkSlateGray;

  --githublink-text:#EEE;
  --githublink-bg:#666;
  --githublink-shadow:#999;
  --githublink-borderline:#000;
  }
}
.structoedit-light, .structoedit-light *{
  --structoedit-warning:red;
  --structoedit-menu:gray;
  --structoedit-menu-bg:lightgray;
  --structoedit-menu-sel:green;
  --structoedit-menu-sel-bg:lightblue;
  --structoedit-mark:PaleTurquoise;
  --structoedit-hovermark:lavender;
  
  --githublink-text:#000;
  --githublink-bg:#EEE;
  --githublink-shadow:lightgray;
  --githublink-borderline:#AAA;
}
.structoedit-dark, .structoedit-dark *{
  --structoedit-menu:silver;
  --structoedit-menu-bg:DimGray;
  --structoedit-menu-sel:mediumseagreen;
  --structoedit-menu-sel-bg:DarkSlateGray;
  --structoedit-mark:midnightblue;
  --structoedit-hovermark:DarkSlateGray;

  --githublink-text:#EEE;
  --githublink-bg:#666;
  --githublink-shadow:#999;
  --githublink-borderline:#000;
}
}

.structcode{
  width:35em;
  min-height:30em;
  resize:vertical;
  max-width: 90vw;
  background:none;
  margin: 0;
  color: inherit;
}
.structcodemarks .mark{
  display:inline-block;
  background-color: var(--structoedit-mark);
}
.structcodemarks .selected{
  position:relative;
}
.structcodemarks .selected:before{
  background-color:var(--structoedit-hovermark);
  content:' ';
  width:35em;
  display: inline-block;
  position: absolute;
}
.scroller {
  position: relative;
	height: calc(100% - .7em - 4px);
	overflow: hidden;
}
.scroller>*{
  line-height: 1.2em;
	font-family: monospace;
	white-space: pre;
  position:relative;
  padding: .1em;
}
.structcodemarks {
	position: absolute;
	z-index: -1;
	margin: 2px 0px 0px 2px;
	color: transparent;
}
.structcodecmd{
  color:red;
  font-weight:bold;
}
figure{
  position:relative;
  display: inline-block;
  vertical-align: top;
  margin: 2em .5em 1em .5em;
  padding:.25em;
  /*! padding-bottom: 0; */
  border:1px dotted gray;
}
figcaption {
  border: 1px dotted gray;
  width: calc(100% + 2px);
  display: block;
  /* margin-top: .5em; */
  background-color: var(--structoview-bg-block);
  padding: .25em;
  font-family: sans-serif;
  position: absolute;
  left: -1px;
  top: -1.5em;
  box-sizing: border-box;
  line-height: 1em;
}
.chars{
  display:inline-block;
  position:absolute;
  right:.5em;
}
#xmlview{
  white-space:pre-wrap;
  font-family:Consolas;
}
figure[data-parsererror]:after{
  color:var(--structoedit-warning);
  content:attr(data-parsererror);
  display:block;
  position: absolute;
  top:100%;
}
.view{
  display:none;
}
#diagram{
  position:absolute;
  top:0;
  left:0;
  visibility:hidden;
}
nav{display:inline-block;padding-top: 0;vertical-align:top;}
nav a{text-decoration:none;}
nav ul{position:relative;display:inline-flex;margin:0;padding:0;}
nav ul[title]{padding-right:.5em;border-top:1px solid var(--structoview-line);flex-direction:column;vertical-align: top;margin-top: 1em;top: .55em;margin-bottom: 1em;}
nav ul:before{content:attr(title);position:absolute;top:-1em;left:.5em;background-color:var(--structoview-bg);padding:0 .1em;}
nav li{list-style:none;margin:.25em;margin-bottom:0;}
nav ul[title]>li{margin:0;padding:0}
nav li.break{flex-basis:100%;margin:0;}
nav .menuitem{color:var(--structoedit-menu-sel);background-color:var(--structoedit-menu-sel-bg);}
nav .menuitem{cursor:pointer;display:block;padding:.5em;margin:.25em;box-sizing:border-box;white-space:pre;line-height: 1em;}
nav label.menuitem{color:var(--structoedit-menu);background-color:var(--structoedit-menu-bg);}
nav .buttons{}
nav .options{}
main .structview{}
input#showHTML:checked~main #diagram{position:relative;visibility:visible;}
input#showSVG:checked~main #viewSVG{display:inline-block;}
input#showXML:checked~main #viewXML{display:inline-block;}
input#showHTML:checked~nav label[for="showHTML"],
input#showSVG:checked~nav label[for="showSVG"],
input#showXML:checked~nav label[for="showXML"]
{color:var(--structoedit-menu-sel);background-color:var(--structoedit-menu-sel-bg);}
input#showHTML:focus~nav label[for="showHTML"],
input#showSVG:focus~nav label[for="showSVG"],
input#showXML:focus~nav label[for="showXML"]
{box-sizing:border-box;outline:1px dotted gray;}
input[name=theme]{display:none;}
input[name=theme]+label{position:relative;}
input[name=theme]:checked+label:after{content:'✓';position: absolute;left:0;text-align:center;width:100%}
body>input{
  position:absolute;
  appearance: none;
}
body>input:focus{outline-style:none;}
body{
  font-family: Segoe UI,sans-serif;
  color:var(--structoview-text);
  background-color:var(--structoview-bg);
}
header {
  display: inline-block;
  margin: .5em;
  border: 1px solid var(--structoview-line);
  padding-left: 1em;
  padding-top: 1em;
  vertical-align: baseline;
}
header h1{
  border-left: 1px solid var(--structoview-line);
  padding: 0.1em .25em;
  margin: 0;
  border-top: 1px solid var(--structoview-line);
}
struct-diagram struct-sequence:hover,
struct-diagram struct-comment:hover,
struct-diagram struct-call:hover,
struct-diagram struct-break:hover,
struct-diagram struct-select:hover,
struct-diagram struct-decision:hover,
struct-diagram struct-loop:hover,
struct-diagram struct-iteration:hover,
struct-diagram struct-concurrent:hover
{
  background:var(--structoedit-hovermark) ;
}

@media (max-width: 40em){
  body{
    margin:0px;
  }
  main{
    margin-left: 1vw;
  }
  footer{
    margin:0px;
    padding:2vw;
    border-top:1px solid var(--structoview-line);
  }
}
@media (min-width:40em){
  body>*{
    z-index:2;
    position:relative;
  }
  /* based on https://www.unindented.org/blog/github-ribbon-using-css-transforms/ */
  footer {
    position: absolute;
    top: 0;
    right: 0;
    overflow: hidden;
    height: 149px;
    width: 149px;
    z-index: 0;
  }
  #githublink {
    position: absolute;
    top: calc(-2em - 6px);
    background-color: var(--githublink-bg);
    transform: rotate(45deg);
    transform-origin: left bottom;
    width: 211px;
    box-shadow: 0 0 5px var(--githublink-shadow);
  }
  #githublink a {
    border: 1px solid var(--githublink-borderline);
    color: var(--githublink-text);
    display: block;
    margin: 1px 0;
    padding: .5em 0;
    text-align: center;
    text-decoration: none;
    font-family: "Segoe UI","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: .8em;
    font-weight: bold;
  }
}
@media print{
  nav{display:none;}
  .structcode{display:none;}
  .structcodemarks{color:initial;position: initial;}
  figure{display:block;}
  footer{position:relative;}
  #githublink{display:none;}
}

